--- a/KeyBoard/keyBoardFile/KeyboardViewController.xib
+++ b/KeyBoard/keyBoardFile/KeyboardViewController.xib
@@ -21,7 +21,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mub-V0-ljA" userLabel="Round Style Text Field0">
-                    <rect key="frame" x="8" y="60" width="359" height="30"/>
+                    <rect key="frame" x="8" y="104" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="acI-Ou-8Sp"/>
                     </constraints>
@@ -30,7 +30,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="iLG-sj-I3m" userLabel="Round Style Text Field1">
-                    <rect key="frame" x="8" y="114" width="359" height="30"/>
+                    <rect key="frame" x="8" y="158" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="nle-71-WrO"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="rHv-Vf-4Ws"/>
@@ -40,7 +40,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JiH-Ba-H2R" userLabel="Round Style Text Field2">
-                    <rect key="frame" x="8" y="176" width="359" height="30"/>
+                    <rect key="frame" x="8" y="220" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="JVb-G1-oO8"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="KC4-wQ-M5U"/>
@@ -51,7 +51,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RFi-tg-a9P" userLabel="Round Style Text Field3">
-                    <rect key="frame" x="8" y="242" width="359" height="30"/>
+                    <rect key="frame" x="8" y="286" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="7cq-5A-ZGG"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="Dun-Bh-iDu"/>
@@ -63,7 +63,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bCi-PW-fb2" userLabel="Round Style Text Field4">
-                    <rect key="frame" x="8" y="304" width="359" height="30"/>
+                    <rect key="frame" x="8" y="348" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="8GR-xG-zgX"/>
                         <constraint firstAttribute="height" constant="30" id="FLC-kz-bKw"/>
@@ -76,7 +76,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j7B-fF-rqy" userLabel="Round Style Text Field5">
-                    <rect key="frame" x="8" y="368" width="359" height="30"/>
+                    <rect key="frame" x="8" y="412" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="7i8-tv-1vn"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="Fge-D1-aDp"/>
@@ -90,7 +90,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Bz-c5-wOe" userLabel="Round Style Text Field6">
-                    <rect key="frame" x="8" y="428" width="359" height="30"/>
+                    <rect key="frame" x="8" y="472" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="Afc-4u-kjs"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="Cjd-fc-gWd"/>
@@ -105,7 +105,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cij-5a-GBJ" userLabel="Round Style Text Field7">
-                    <rect key="frame" x="8" y="494" width="359" height="30"/>
+                    <rect key="frame" x="8" y="538" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="0eF-Hy-aHo"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="5vk-8q-Vb8"/>
@@ -121,7 +121,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CLE-21-rpi" userLabel="Round Style Text Field8">
-                    <rect key="frame" x="8" y="556" width="359" height="30"/>
+                    <rect key="frame" x="8" y="600" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="04s-C6-Yd3"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="62D-Xc-bhi"/>
@@ -137,7 +137,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y7r-LY-IsO" userLabel="Round Style Text Field9">
-                    <rect key="frame" x="8" y="622" width="359" height="30"/>
+                    <rect key="frame" x="8" y="666" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="5VP-mM-5Ta"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="LdA-XW-38l"/>
@@ -153,7 +153,7 @@
                     <textInputTraits key="textInputTraits"/>
                 </textField>
                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HM4-f4-fgi" userLabel="Round Style Text Field10">
-                    <rect key="frame" x="8" y="677" width="359" height="30"/>
+                    <rect key="frame" x="8" y="721" width="359" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="2Al-F1-w0i"/>
                         <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="7tE-tk-otT"/>
@@ -170,10 +170,10 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="mub-V0-ljA" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="40" id="1IH-px-IPv"/>
                 <constraint firstItem="5Bz-c5-wOe" firstAttribute="top" secondItem="j7B-fF-rqy" secondAttribute="bottom" constant="30" id="4qe-Pj-6c4"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="RFi-tg-a9P" secondAttribute="trailing" constant="8" id="9uD-c5-WnX"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="5Bz-c5-wOe" secondAttribute="trailing" constant="8" id="BE7-65-c8p"/>
+                <constraint firstItem="mub-V0-ljA" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="84" id="Dhq-f3-cPB"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="iLG-sj-I3m" secondAttribute="trailing" constant="8" id="DlK-41-9xz"/>
                 <constraint firstItem="bCi-PW-fb2" firstAttribute="top" secondItem="RFi-tg-a9P" secondAttribute="bottom" constant="32" id="Egx-bL-u8E"/>
                 <constraint firstItem="j7B-fF-rqy" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="8" id="FZv-N1-cbw"/>
